--- a/src/components/front/Cart/Cart.css
+++ b/src/components/front/Cart/Cart.css
@@ -65,3 +65,35 @@
 .cart-items-remove:active {
   transform: translateY(2px);
 }
+.cart-items-total-price-name {
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 22%;
+  font-size: 20px;
+  font-weight: 700;
+  border-top: 2px solid black;
+}
+.cart-items-total-price {
+  display: flex;
+  padding-left: 45%;
+}
+.clear-cart {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.clear-cart-button {
+  border: none;
+  border-radius: 5px;
+  background-color: red;
+  height: 30px;
+  width: 100px;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+}
+.clear-cart-button:hover {
+  background-color: green;
+}
