--- a/src/components/front/Products/Products.css
+++ b/src/components/front/Products/Products.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  background-color: black;
+  background-color: orange;
   border-radius: 3px;
 }
 .card {
