--- a/src/components/front/header/header.css
+++ b/src/components/front/header/header.css
@@ -8,13 +8,13 @@
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  background-color: rgb(134, 96, 25);
+  background-color: rgb(153, 153, 0);
   margin-top: 5px;
 }
 .logo {
   text-decoration: none;
   text-transform: uppercase;
-  color: white;
+  color: black;
   padding-left: 40px;
 }
 .header-links {
@@ -23,25 +23,25 @@
 .header-links ul li {
   list-style: none;
   display: inline-block;
-  font-size: 18px;
+  font-size: 20px;
 }
 .header-links ul li a {
   text-decoration: none;
   text-transform: uppercase;
-  color: white;
+  color: black;
   padding: 0px 15px;
 }
 .header-links ul li a:hover {
-  color: rgb(153, 153, 0);
+  color: orange;
 }
 .cart {
   padding-right: 10px;
   margin-right: 20px;
 }
 .cart-length {
-  margin: 3px;
-  font-size: 15px;
-  font-weight: 700;
+  margin: 5px;
+  font-size: 18px;
+  font-weight: 1000;
   vertical-align: super;
-  color: orange;
+  color: white;
 }
